
# Meteor Shade Wasteland:
- Locks Vermillion Wasteland Tunnel behind a Meteor Shade barrier.

==========================================================================================

## VERSION CHANGES ##

# v0.2.0
New Patches:
- Open Faj'ro
- Meteor Shade Wasteland
Fixes:
- Fixed the compatiblity between multiple extra patches, which wasn't working at all since VT Skip patch was added
- Changed Emilie being Offline after starting the Maroon Tree until you finished it.
- Fixed a few V'rda Vil mentions about the cat plague, and also removed the cat plague outside Elder's House (there's still a few outside K'tara's House lets pretend these are their pets)
- Fixed a wrong variable that didn't let you start Mr. Nomsworth second quest in Rookie Harbor
- Fixed the Black Market guard despawning after talking to him once
Changes:
- Made the VTower-ShadeLock barriers 2 instead of 4 for clarity (and it looked kind of awful to be honest)

----------------------

# v0.1.8
New Patches: 
- Vermillion Tower floor skips
Fixes:
- Sprouting Business quest is not longer locked if you open the black market barriers first
- Meteor Shade cutscene wasn't tracking conditions properly
- Added a check to not start Apollo fight if you have a party
- Extra conditions checks in V'rda Vil area that were missing
Changes:
- Rookie Harbor quests after Faj'ro Temple, now unlock when you obtain Red Flame Shade
- Bergen Village quests after Temple Mine, now unlock after obtaining Blue Ice Shade
- Ba'kii Kum quests after Faj'ro Temple, now unlock after obtaining Red Flame Shade
- Basin Keep quests after So'najiz and Zir'vitar, now unlock after obtaining Azure Drop Shade and Purple Bolt Shade instead
- Last Minute Heroes quest unlocked after obtaining Meteor Shade

# v0.1.7
- Made access to Guild Area tied to meeting Schneider after getting Mine Pass, and not tied to plot.line
- Changed Meteor Shade room cutscenes in Sapphire Ridge's Old Dojo to not be tied to plot.line